--- a/apps.json
+++ b/apps.json
@@ -1,6 +1,6 @@
 {
   "dw": {
-    "provider": "bundler_capistrano",
+    "provider": "capistrano",
     "auto_merge": false,
     "repository": "cloudy9101/dreamweaver",
     "environments": ["production"]
