--- a/apps.json
+++ b/apps.json
@@ -5,4 +5,10 @@
     "repository": "cloudy9101/dreamweaver",
     "environments": ["production"]
   }
+  "singularity": {
+    "provider": "bundler_capistrano",
+    "auto_merge": false,
+    "repository": "GeekPark/singularity",
+    "environments": ["production"]
+  }
 }
