--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "description": "A simple helpful robot for your Company",
   "dependencies": {
     "hubot": "^2.13.2",
+    "hubot-auto-deploy": "^0.1.9",
+    "hubot-deploy": "0.6.53",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.1.5",
     "hubot-google-translate": "^0.2.0",
@@ -19,8 +21,7 @@
     "hubot-scripts": "^2.16.1",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
-    "node-trello": "1.1.2",
-    "hubot-deploy": "0.6.53"
+    "node-trello": "1.1.2"
   },
   "engines": {
     "node": "0.10.x"
